Added correct file location.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
         env:
           FIREBASE_OAUTH_TOKEN: ${{ secrets.FIREBASE_OAUTH_TOKEN }}
         run: |
-          python exercise_game.py 
+          python /assignment/exercise_game.py 
