Debugging GitHub action for running exercise_game.py

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,11 @@ jobs:
         with:
           python-version: '3.x'  # Ensure the right Python version is installed
 
+      - name: List files in the repository  # Optional for debugging
+        run: ls -R
+
       - name: Run Python Script
         env:
           FIREBASE_OAUTH_TOKEN: ${{ secrets.FIREBASE_OAUTH_TOKEN }}
         run: |
-          python /assignment/exercise_game.py 
+          python assignment/exercise_game.py 
